--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^12.5.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.487.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
